@@ -14,7 +14,28 @@
 #                   'CheckBox Widget',
 #                  ]
 # Setting them to None (default) will display all widgets.
-                 
+
+# type_actions is a list or tuple of action property dictionaries.
+# type_actions = (
+#         {'id': 'view',
+#          'name': 'action_view',
+#          'action': 'string:${object_url}/cpsdocument_view',
+#          'condition': '',
+#          'permission': ('View',),
+#          'category': 'object',
+#          'visible': 1,},
+#         {'id': 'new_content',
+#          'name': 'action_new_content',
+#          'action': 'string:${object_url}/folder_factories',
+#          'condition': "python:object.getTypeInfo().cps_proxy_type != 'document'",
+#          'permission': ('Modify portal content',),
+#          'category': 'object',
+#          'visible': 1,},
+#    )
+# If specified, this will *replace* the default CPSDocument actions when the
+# type is created. Set to None (or any false value) the default CPSDocument 
+# actions will be used
+
 return {'type_prefix': 'simpletype_', # The id prefix for TypeMaker types.
         'style_prefix': 'layout_default_tab_',
         'base_schemas': ['metadata', 'custom_metadata', 'common'],
@@ -23,4 +44,5 @@ return {'type_prefix': 'simpletype_', # The id prefix for TypeMaker types.
         'metadata_id': 'custom_metadata',
         'widget_list': None,
         'flexible_widget_list': None,
-       }
+        'type_actions': None,
+       }       
