@@ -8,6 +8,7 @@ New features:
 - You can now specify which widget types are allowed.
 - You can now uncheck the "Addable" setting, which will make the type
   not appear in any "New" lists.
+- You can now configure the actions for newly created types.
 Bug fixes:
 ~~~~~~~~~~
 - "NoneType object has no attribute read" error under dr's MacOS X/Safari
